test/files/pos/t6760/WithClone.java
package test;

public abstract class WithClone {
  public abstract Object clone();
}
