test/files/neg/t8754/A_1.java
public class A_1 {}

interface Component {
	public ListModel getModel();
}
interface ListModel {}
